--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Github profile from Arno De Pachter</title>
-<link rel="stylesheet" href="style.css" type="text/css">
+<link rel="stylesheet" href="./style.css" type="text/css">
 </head>
 <body>
 <div id="alles">
@@ -11,7 +11,7 @@
     </div>
 
     <div class="eentje">
-        <img src="arno.jpg">
+        <img src="./arno.jpg">
     </div>
 </div>
 </body>
