--- a/index.html
+++ b/index.html
@@ -61,6 +61,24 @@
     
 
   </div>
+
+  <div class="half-block-2"><h2>Extra information</h2></div>
+
+
+  <div class="half-block-3">
+    
+    <div class="card" style="width: 18rem;">
+      <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/LinkedIn_Logo.svg/1280px-LinkedIn_Logo.svg.png" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">LinkedIn</h5>
+        <p class="card-text">Visit and connect to my LinkedIn Page! I won't bite!</p>
+        <a href="https://www.linkedin.com/in/arno-de-pachter-36205b67/" class="btn btn-primary">Go to my LinkedIn</a>
+      </div>
+    </div>
+
+
+
+  </div>
 </div>
 </body>
 </html>
